[package]
name = "ai-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
fastrand = "2"
serde = {version = "1", features = ["derive"]}
wit-bindgen-rt = { version = "0.27", features = ["bitflags"] }
bindings = {path = "../client_bindings"}
client_utils = { path = "../client_utils", features = ["wit-bindings"] }
anyhow = "1"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:ai-demo"
