[package]
name = "ai-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
fastrand = "2"
serde = {version = "1", features = ["derive"]}
wit-bindgen-rt = { version = "0.27", features = ["bitflags"] }
bindings = {git = "https://github.com/Caudiciform-Studios/client_bindings.git"}
client_utils = { git = "https://github.com/Caudiciform-Studios/client_utils.git"}
anyhow = "1"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:ai-demo"
